--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,37 @@
     ]
   },
   {
+    "title": "Thoát vị ba đĩa đệm đốt sống cổ",
+    "content": "Anh An, 38 tuổi, được chẩn đoán bị thoát vị ba đĩa đệm đốt sống cổ, gây ra tình trạng đau cổ và yếu tay chân. Phẫu thuật đã được thực hiện để loại bỏ các đĩa đệm hư hỏng và giảm áp lực lên tủy sống, giúp anh phục hồi nhanh chóng. Nguyên nhân chính dẫn đến tình trạng này được xác định là do việc sử dụng điện thoại quá nhiều với tư thế không đúng.",
+    "link": "https://vnexpress.net/thoat-vi-ba-dia-dem-dot-song-co-4863383.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thoát vị ba đĩa đệm đốt sống cổ gây ra triệu chứng gì cho bệnh nhân?",
+    "answers": [
+      {
+        "text": "Đau cổ và yếu tay chân",
+        "correct": true
+      },
+      {
+        "text": "Chỉ đau lưng không",
+        "correct": false
+      },
+      {
+        "text": "Không có triệu chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Khó ngủ và mệt mỏi",
+        "correct": false
+      },
+      {
+        "text": "Đau đầu liên tục",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tân Sơn Nhất thí điểm chuyến bay đi, đến nhà ga mới",
     "content": "Tân Sơn Nhất sẽ chính thức thí điểm nhà ga T3 từ tháng 4-2025 với tổng mức đầu tư 11.000 tỉ đồng. Các chuyến bay đầu tiên từ Tân Sơn Nhất đi Vân Đồn sẽ diễn ra vào ngày 24-4, và đường bay TP.HCM - Hà Nội sẽ tham gia thử nghiệm vào ngày 28-4. Các hãng hàng không sẽ thông báo cho hành khách về việc chuyển đổi nhà ga nhằm giảm thiểu nhầm lẫn giữa các chuyến bay. Nhà ga T3 dự kiến sẽ giảm tải cho nhà ga T1 hiện đang quá tải.",
     "link": "https://tuoitre.vn/tan-son-nhat-thi-diem-chuyen-bay-di-den-nha-ga-moi-20250319232915747.htm",
@@ -815,37 +846,6 @@
     ]
   },
   {
-    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
-    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
-    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
-    "answers": [
-      {
-        "text": "Tài chính - ngân hàng",
-        "correct": true
-      },
-      {
-        "text": "Báo chí truyền thông",
-        "correct": false
-      },
-      {
-        "text": "Kỹ thuật phần mềm",
-        "correct": false
-      },
-      {
-        "text": "Nghệ thuật sáng tạo",
-        "correct": false
-      },
-      {
-        "text": "Y tế và công nghệ sinh học",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
     "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
     "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
@@ -949,6 +949,37 @@
       },
       {
         "text": "Chỉ đơn giản là thích nghỉ việc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
+    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
+    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
+    "answers": [
+      {
+        "text": "Tài chính - ngân hàng",
+        "correct": true
+      },
+      {
+        "text": "Báo chí truyền thông",
+        "correct": false
+      },
+      {
+        "text": "Kỹ thuật phần mềm",
+        "correct": false
+      },
+      {
+        "text": "Nghệ thuật sáng tạo",
+        "correct": false
+      },
+      {
+        "text": "Y tế và công nghệ sinh học",
         "correct": false
       }
     ]
@@ -2268,28 +2299,32 @@
     ]
   },
   {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
     "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
     "answers": [
       {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "text": "Khó thở và ho khan kéo dài",
         "correct": true
       },
       {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "text": "Đau đầu và chóng mặt",
         "correct": false
       },
       {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "text": "Nôn mửa và tiêu chảy",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
@@ -2380,37 +2415,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
-    "answers": [
-      {
-        "text": "Khó thở và ho khan kéo dài",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu và chóng mặt",
-        "correct": false
-      },
-      {
-        "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
     "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
     "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
@@ -2433,6 +2437,33 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -4251,37 +4282,6 @@
     ]
   },
   {
-    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
-    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
-    "answers": [
-      {
-        "text": "7 kg",
-        "correct": true
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      },
-      {
-        "text": "6 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
     "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
     "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
@@ -4308,6 +4308,37 @@
       },
       {
         "text": "Chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
+    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
+    "answers": [
+      {
+        "text": "7 kg",
+        "correct": true
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      },
+      {
+        "text": "6 kg",
         "correct": false
       }
     ]
@@ -4953,64 +4984,6 @@
       },
       {
         "text": "Giảm giá khi mua xe điện",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bộ đội mới xuất ngũ đi xuất khẩu lao động cần phải có bằng cấp 2?",
-    "content": "Bài viết cung cấp thông tin về việc người lao động xuất ngũ từ quân đội có cần bằng cấp 2 để tham gia xuất khẩu lao động hay không. Luật sư Nguyễn Ngô Quang Nhật đã tư vấn rằng pháp luật Việt Nam không yêu cầu người lao động phải có bằng cấp 2 để đi làm việc ở nước ngoài. Tuy nhiên, người lao động cần chú ý đến các yêu cầu của nước tiếp nhận lao động, bao gồm sức khỏe và trình độ chuyên môn.",
-    "link": "https://tuoitre.vn/bo-doi-moi-xuat-ngu-di-xuat-khau-lao-dong-can-phai-co-bang-cap-2-2025031522262342.htm",
-    "cat": "phap-luat",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Bộ đội xuất ngũ có cần bằng cấp 2 để xuất khẩu lao động không?",
-    "answers": [
-      {
-        "text": "Không cần bằng cấp 2.",
-        "correct": true
-      },
-      {
-        "text": "Cần bằng cấp 3.",
-        "correct": false
-      },
-      {
-        "text": "Cần bằng cấp 1.",
-        "correct": false
-      },
-      {
-        "text": "Cần bằng đại học.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Loạn giá heo hơi, doanh nghiệp chăn nuôi lớn bỏ niêm yết giá",
-    "content": "Giá heo hơi tại miền Nam vào ngày 18-3 dao động từ 77.000 đến 80.000 đồng/kg, thấp hơn so với mức đỉnh 84.000 đồng/kg trước đó, trong khi miền Bắc ghi nhận giá từ 72.500 đến 75.500 đồng/kg. Nhiều doanh nghiệp chăn nuôi lớn không niêm yết giá bán ra, dẫn đến tình trạng loạn giá. Một số doanh nghiệp duy trì giá xuất chuồng khoảng 70.000 đồng/kg để bình ổn thị trường, nhưng thực tế giá mua vào cao hơn nhiều. Nếu không có giải pháp kịp thời, giá heo hơi có thể giữ ở mức cao trong thời gian tới.",
-    "link": "https://tuoitre.vn/loan-gia-heo-hoi-doanh-nghiep-chan-nuoi-lon-bo-niem-yet-gia-20250319075257693.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Tại sao giá heo hơi lại không ổn định hiện nay?",
-    "answers": [
-      {
-        "text": "Doanh nghiệp chăn nuôi lớn không niêm yết giá bán ra",
-        "correct": true
-      },
-      {
-        "text": "Giá heo hơi tăng do nhu cầu thị trường cao",
-        "correct": false
-      },
-      {
-        "text": "Giá heo hơi giảm do nguồn cung dồi dào",
-        "correct": false
-      },
-      {
-        "text": "Thời tiết xấu ảnh hưởng đến chăn nuôi",
-        "correct": false
-      },
-      {
-        "text": "Giá heo hơi thay đổi theo từng ngày",
         "correct": false
       }
     ]
