--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Anh: Nga không thể phủ quyết việc triển khai quân đội phương Tây ở Ukraine",
+    "content": "Ngoại trưởng Anh David Lammy khẳng định rằng Nga không có quyền phủ quyết việc triển khai quân đội phương Tây tại Ukraine nhằm gìn giữ hòa bình. Ông nhấn mạnh rằng Tổng thống Putin cần chấp nhận các đề xuất ngừng bắn và không thể kiểm soát sự hiện diện quân sự nước ngoài ở Ukraine. Bên cạnh đó, Thủ tướng Anh Keir Starmer đã đề xuất kế hoạch triển khai hơn 10.000 binh sĩ để đảm bảo an ninh sau khi xung đột kết thúc.",
+    "link": "https://dantri.com.vn/the-gioi/anh-nga-khong-the-phu-quyet-viec-trien-khai-quan-doi-phuong-tay-o-ukraine-20250321102834064.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Nga có quyền phủ quyết việc triển khai quân đội phương Tây ở Ukraine không?",
+    "answers": [
+      {
+        "text": "Không, Nga không có quyền phủ quyết.",
+        "correct": true
+      },
+      {
+        "text": "Có, Nga có quyền phủ quyết.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ khi có sự đồng ý của Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nếu NATO không tham gia.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lính cứu hỏa Mỹ dùng chăn đặc biệt dập cháy ôtô điện",
     "content": "Vào ngày 16/3 tại Granite Falls, Washington, đội cứu hỏa đã sử dụng một chăn chống cháy đặc biệt để dập tắt đám cháy của một chiếc ôtô điện. Việc dập lửa ôtô điện phức tạp hơn so với xe động cơ đốt trong, thường yêu cầu kỹ thuật và thiết bị đặc biệt. Chăn chống cháy này được thiết kế để giảm thiểu rủi ro cháy trở lại, trong khi các vụ cháy xe điện tổng thể vẫn ít hơn so với xe chạy bằng xăng.",
     "link": "https://vnexpress.net/linh-cuu-hoa-my-dung-chan-dac-biet-dap-chay-oto-dien-4864034.html",
@@ -669,6 +696,33 @@
     ]
   },
   {
+    "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
+    "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
+    "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Anh Tân phát hiện bệnh gì khi 30 tuổi?",
+    "answers": [
+      {
+        "text": "Hẹp eo động mạch chủ",
+        "correct": true
+      },
+      {
+        "text": "Bệnh van tim ba mảnh",
+        "correct": false
+      },
+      {
+        "text": "Tăng huyết áp nguyên phát",
+        "correct": false
+      },
+      {
+        "text": "Bệnh mạch vành",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Viêm tai giữa thủng nhĩ mà không biết",
     "content": "Chị Duyên, 35 tuổi, đã bị viêm tai giữa gây thủng màng nhĩ mà không biết và tự điều trị trong một năm. Khi triệu chứng đau tai và ù nặng hơn, chị mới đến bệnh viện khám và được chẩn đoán thủng màng nhĩ do viêm tai giữa. Bác sĩ đã tiến hành phẫu thuật vá màng nhĩ cho chị và khuyến cáo cần điều trị kịp thời để tránh các biến chứng nghiêm trọng như mất thính lực hay nhiễm trùng tai.",
     "link": "https://vnexpress.net/viem-tai-giua-thung-nhi-ma-khong-biet-4864027.html",
@@ -727,33 +781,6 @@
     ]
   },
   {
-    "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
-    "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
-    "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Anh Tân phát hiện bệnh gì khi 30 tuổi?",
-    "answers": [
-      {
-        "text": "Hẹp eo động mạch chủ",
-        "correct": true
-      },
-      {
-        "text": "Bệnh van tim ba mảnh",
-        "correct": false
-      },
-      {
-        "text": "Tăng huyết áp nguyên phát",
-        "correct": false
-      },
-      {
-        "text": "Bệnh mạch vành",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mỹ trục xuất cầu thủ xăm biểu tượng Real Madrid",
     "content": "Cầu thủ bóng đá Jerce Reyes Barrios, 26 tuổi, đã bị trục xuất khỏi Mỹ do bị cáo buộc là thành viên băng đảng bạo lực, liên quan đến hình xăm biểu tượng Real Madrid của anh. Dù đã có phiên điều trần về nhập cư, anh cùng hơn 200 người khác đã bị đưa về El Salvador vào ngày 15/3/2025. Luật sư của Barrios khẳng định hình xăm của anh chỉ mang ý nghĩa bóng đá và gia đình, không liên quan đến băng đảng. Quyết định trục xuất này đã gây ra nhiều tranh cãi và phản đối từ gia đình và luật sư của anh.",
     "link": "https://vnexpress.net/my-truc-xuat-cau-thu-xam-bieu-tuong-real-madrid-4863991.html",
@@ -781,33 +808,6 @@
     ]
   },
   {
-    "title": "Đâm đuôi xe tải, hai người tử vong",
-    "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
-    "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tại sao hai người lại tử vong trong vụ tai nạn xe tải ở Phú Yên?",
-    "answers": [
-      {
-        "text": "Do bị mắc kẹt trong cabin sau khi đâm vào xe khác.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe tải bị lật vào mương.",
-        "correct": false
-      },
-      {
-        "text": "Do tài xế không có giấy phép lái xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe tải chạy quá tốc độ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe tải đâm nhau, hai người chết",
     "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
     "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
@@ -830,6 +830,33 @@
       },
       {
         "text": "Tài xế bị phạt tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đâm đuôi xe tải, hai người tử vong",
+    "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
+    "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao hai người lại tử vong trong vụ tai nạn xe tải ở Phú Yên?",
+    "answers": [
+      {
+        "text": "Do bị mắc kẹt trong cabin sau khi đâm vào xe khác.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe tải bị lật vào mương.",
+        "correct": false
+      },
+      {
+        "text": "Do tài xế không có giấy phép lái xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe tải chạy quá tốc độ.",
         "correct": false
       }
     ]
@@ -1419,33 +1446,6 @@
     ]
   },
   {
-    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
-    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
-    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
-    "answers": [
-      {
-        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
-        "correct": true
-      },
-      {
-        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
-        "correct": false
-      },
-      {
-        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
     "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
     "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
@@ -1468,6 +1468,33 @@
       },
       {
         "text": "Không, lớp bọt này cần phải được hớt bỏ mỗi lần nấu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
+    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
+    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
+    "answers": [
+      {
+        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
+        "correct": true
+      },
+      {
+        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
+        "correct": false
+      },
+      {
+        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
         "correct": false
       }
     ]
@@ -3491,6 +3518,33 @@
     ]
   },
   {
+    "title": "10 năm không con do dính buồng tử cung",
+    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
+    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
+    "answers": [
+      {
+        "text": "Dính buồng tử cung",
+        "correct": true
+      },
+      {
+        "text": "Vô sinh do tuổi tác",
+        "correct": false
+      },
+      {
+        "text": "Bệnh lý di truyền",
+        "correct": false
+      },
+      {
+        "text": "Thiếu hụt hormone",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
     "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
     "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
@@ -3540,33 +3594,6 @@
       },
       {
         "text": "Có thể lây qua nước uống.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "10 năm không con do dính buồng tử cung",
-    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
-    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
-    "answers": [
-      {
-        "text": "Dính buồng tử cung",
-        "correct": true
-      },
-      {
-        "text": "Vô sinh do tuổi tác",
-        "correct": false
-      },
-      {
-        "text": "Bệnh lý di truyền",
-        "correct": false
-      },
-      {
-        "text": "Thiếu hụt hormone",
         "correct": false
       }
     ]
